--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
-        <h2>test</h2>
+        <h3>tes test</h3>
       </header>
       <div class="card">
         <div class="card-header">
